README: sync with the restriction of not accepting trailing slashes
(Committed in https://github.com/7digital/HttpMock/commit/7e6cf0931d49c1b161e58fdb3e3b77d8df8c6fd8 )

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Eample usage:
 
 	[Test]
  	public void SUT_should_return_stubbed_response() {
-		_stubHttp = HttpMockRepository.At("http://localhost:9191/");
+		_stubHttp = HttpMockRepository.At("http://localhost:9191");
 
 		const string expected = "<xml><>response>Hello World</response></xml>";
 		_stubHttp.Stub(x => x.Get("/endpoint"))
