--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-![Build status]
-(https://ci.appveyor.com/api/projects/status/pqjfme8k5kl7r7av?svg=true)
+[![Build status]
+(https://ci.appveyor.com/api/projects/status/pqjfme8k5kl7r7av?svg=true)]
 (https://ci.appveyor.com/project/hibri/httpmock)
 
 A .Net library to create HTTP servers, which returns canned responses at run time.
